# streamlit_backend

./: .coverage  .gitignore  Descrição do Projeto.md  README.md  coverage.xml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
junit/: test-results.xml
src/: __init__.py  _version.py  app.py
src/auth/: __init__.py  service.py
src/config/: __init__.py  database.py  settings.py
src/ml_contracts/: __init__.py  models.py
src/pages/: __init__.py  admin.py  exploration.py  models_center.py
src/telemetry/: __init__.py  logger.py
src/transformations/: __init__.py  base.py
tests/: test_app.py  test_auth.py  test_config.py  test_ml_contracts.py  test_telemetry.py
