[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project]
name = "streamlit-backend"
dynamic = ["version"]
description = "Plataforma de Analytics com Streamlit, DuckDB, Ibis e dlt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-postgresql>=1.11.0",
    "duckdb>=1.5.3",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "ruff>=0.15.14",
    "streamlit>=1.57.0",
    "streamlit-authenticator>=0.4.2",
    "ty>=0.0.39",
]

[dependency-groups]
dev = [
    "genbadge[coverage]>=1.1.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]

[tool.hatch.version]
source = "vcs"

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "Versão atual: {current_version}"
replace = "Versão atual: {new_version}"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double" # Aspas duplas
indent-style = "space" # Indentação por espaços
skip-magic-trailing-comma = false # Mantém vírgular finais automáticas
line-ending = "auto"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # Ignora type hint para *args e **kwargs
suppress-none-returning = true # Não obriga que a saída seja 'return' None

[tool.ruff.lint]
select = [
    "NPY", # Numpy-specific rules: Evita funções obsoletas e garante o uso correto de tipos Numpy
    "PD", # pandas-vet: Melhores práticas para Pandas
    "F", # Pyflakes: Detecata variáveis não utilizadas e erros de lógica básica
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort: Organiza imports
    "UP", # pyupgrade: Mantém a sintaxe do Python moderna
    "PL", # Pylint: Identifica funções com argumentos demais
    "T201", # flake8-print: Proíbe uso de print() ao invés de logging
    "S", # flake8-bandit: Verifica falhas de segurança
    "B", # flake8-bugbear (bugs comuns)
    "ANN", # flake8-annotations: Garante a tipagem dos agumentos das funções
    "TCH", # flake8-type-checking: Organiza imports que servem apenas para tipos
    "PYI", # flake8-pyi: Regras específicas para arquivos de interface de tipos .pyi
    "N" # Verifica se os nomes das variáveis, funções e classes seguem PEP 8
]
ignore = [
"E501",
"ANN002", # Permite não fornece type hint para *args
"ANN003", # Permite não fornecer type hint para **kwargs
"ANN401", # Permite utilizar typing.Any
"PLR2004", # Permite magic value
]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X_*", "y_*", "df"] # Ignora regra de naming para variáveis comuns em ML

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--cov=src/", # Irá cobrir apenas a pasta src
    "--cov-report=term-missing", # Lista quais linhas exatas não foram testadas
    "--cov-report=xml", # Gera relatório em XML
    "--cov-report=html", # Gera relatório em HTML
    "--junitxml=junit/test-results.xml", # Exporta para XML, uso no GitHub Actions
    "-ra", # Mostra um resumo ao final
    "--verbose", # Aumenta o detalhamento da saída
    "--strict-markers", # Retorna erro se tentar usar decorator não registrado
    "--strict-config", # Retorna erro se houve configuração inválida
    "-n=auto", # Execução paralela
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning", # Silencia avisos de funcionalidades que serão removidas
    "ignore::UserWarning", # Silencia avisos da biblioteca
    "default" # Garante que qualquer outro aviso seja exibido uma vez por local de emissão
]

[tool.coverage.run]
source = ["src/"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/setup.py",
    "*/conftest.py",
    "*/pipeline_registry.py",
    "*/__main__.py",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 0 # Mudar posteriormente para 80%
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\b:",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"
title = "Streamlit-UI Backend"
